--- a/HTML/register.html
+++ b/HTML/register.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../CSS/login.css" />
 </head>
 <body>
 
     <div class="form-container">
-        <h2>Login</h2>
+        <a href="../HTML/index.html" class="close-btn">&#10006;</a>
+        <h2>Register</h2>
         <form action="#" method="post">
+            <div class="form-group">
+                <label for="text">Name:</label>
+                <input type="text" id="text" name="text" required>
+            </div>
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
@@ -18,11 +23,11 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit">Register</button>
         </form>
-        <div class="register">
-            <h4>Don't have an account ?</h4>
-            <a href="register.html">Register</a>
+        <div class="login">
+            <h4>Already have an account ?</h4>
+            <a href="../HTML/login.html">Login</a>
         </div>
     </div>
 
